--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
                     <a href="images/my-cv.pdf" download class="btn btn2">donlowad cv</a>
                 </div>
                 <div class="contact-right">
-                    <form action="https://formsubmit.co/farrelizzanmaulana@gmail.com" method="post">
+                    <form action="https://formsubmit.co/farelizanmaulana@gmail.com" method="POST">
+                        <input type="hidden" name="_subject" value="Pengiriman baru!">
+                        <input type="hidden" name="_autoresponse" value="Terima kasih sudah melihat dan mencoba website ini!">
                         <input type="text" name="Name" placeholder="Your Name" required/>
                         <input type="email" name="email" placeholder="Your Email" required/>
                         <textarea name="Massage"rows="6" placeholder="Your Massage" ></textarea>
