--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#service">Service</a></li>
-                    <li><a href="#portofolio">Portofolio</a></li>
+                    <li><a href="portofolio.html">Portofolio</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <div class="marker"></div>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -43,7 +44,7 @@
                     <h1 class="sub-title">About Me</h1>
                     <img src="img/💤.jpeg" alt="">
                     <p>
-                        Saya adalah seorang siswa dari SMK WIKRAMA Bogor. Saya berumur 15 tahun, dan saya menempati dikelas 10, dan saya berada dijurusan PPLG. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                        Saya adalah seorang siswa dari SMK WIKRAMA Bogor, berumur 15 tahun, saya menempati dikelas 10, dan saya berada dijurusan PPLG. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
                         consectetur rerum provident, ipsum earum quis, laborum animi laboriosam harum mollitia, itaque quisquam quaerat odio
                         beatae! Quis voluptatum voluptas blanditiis temporibus?
                     </p>
@@ -107,14 +108,14 @@
     </div>
     <div id="Portofolio">
         <div class="container">
-            <h1 class="sub-tittle">Riwayat Pendidkan</h1>
+            <h1 class="sub-tittle">Riwayat Pendidikan</h1>
             <div class="work-list">
                 <div class="work">
                     <img src="img/2022-05-26.jpg" alt="">
                     <h4>SDN Ciawi 01</h4>
                     <div class="layer">
                         <p>Jl. Nasional 11 No.487, Bendungan, Kec. Ciawi, Kabupaten Bogor, Jawa Barat 16720</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://maps.app.goo.gl/KUNi7fg3Vhgme9g3A"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -122,7 +123,7 @@
                     <h4>SMPN 1 Megamendung</h4>
                     <div class="layer">
                         <p>8VX8+VWF, Jalan Raya Puncak, Pasir Angin, Megamendung, Cipayung Datar, Kec. Megamendung, Kabupaten Bogor, Jawa Barat 16720</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://maps.app.goo.gl/Tnfp4pxgUJVRUJ328"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -130,7 +131,7 @@
                     <h4>SMK Wikrama Bogor</h4>
                     <div class="layer">
                         <p>Jl. Raya Wangun, RT.01/RW.06, Sindangsari, Kec. Bogor Tim., Kota Bogor, Jawa Barat 16146</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://maps.app.goo.gl/guHwAcdYaGtp9TMd8"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
@@ -143,11 +144,11 @@
                 <div class="contact-left">
                     <h1 class="sub-tittle">Contact Me</h1>
                     <p><i class="fa-solid fa-paper-plane"></i>farelizanmaulana@gmail.com</p>
-                    <p><i class="fa-sharp fa-solid fa-phone"></i>089519099913</p>
+                    <p><i class="fa-sharp fa-solid fa-phone"></i>089099999</p>
                     <div class="social-icons">
-                        <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter-square"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram" ></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100093467893083&mibextid=vk8aRt"><i class="fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-twitter-square"></i></a>
+                        <a href="https://www.instagram.com/farelzna?igsh=MTY4eW0wNmZxNTlrcw=="><i class="fa-brands fa-instagram" ></i></a>
                     </div>
                     <a href="images/my-cv.pdf" download class="btn btn2">donlowad cv</a>
                 </div>
@@ -164,7 +165,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>Copyright Kevin. Made with by Rrell</p>
+            <p>Copyright Kevin. Made with by farelzna</p>
         </div>
     </div>
     <script src="main.js"></script>
