--- a/portofolio.html
+++ b/portofolio.html
@@ -23,7 +23,7 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
         </div>
-        <div class="body2">
+        <!-- <div class="body2">
           <span class="loader"></span>
           <div class="p">
             <p>Sorry, this page has not been created yet</p>
@@ -31,6 +31,6 @@
         </div>
           <div class="copyright">
           <p>Copyright Kevin. Made with by farelzna</p>
-        </div>
+        </div> -->
 </body>
 </html>
